update dev npm modules

--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "scripts": {
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js"
   },
-  "dependencies": {},
   "devDependencies": {
     "express-mysql-session": "^1.2.3",
     "fs-extra": "^5.0.0",
     "mocha": "^5.0.1",
-    "mysql": "^2.15.0",
+    "mysql2": "^1.5.2",
     "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
-    "we-core": "wejs/we-core",
+    "we-core": "^2",
     "we-test-tools": "wejs/we-test-tools"
   },
   "author": "Alberto Souza <contato@albertosouza.net>",
