Update to we.js v3.x

--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "version": "2.0.5",
   "main": "plugin.js",
   "scripts": {
-    "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js"
+    "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b ",
+    "coverage": "NODE_ENV=test LOG_LV=info nyc ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b"
   },
   "devDependencies": {
-    "express-mysql-session": "^2.1.0",
-    "fs-extra": "^8.0.1",
-    "mocha": "^6.1.4",
-    "mysql2": "^1.6.5",
-    "rimraf": "^2.6.3",
+    "connect-sqlite3": "^0.9.11",
+    "fs-extra": "^8.1.0",
+    "mocha": "^7.0.0",
+    "nyc": "^15.0.0",
+    "rimraf": "^3.0.0",
+    "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
-    "we-core": "^2",
-    "we-test-tools": "wejs/we-test-tools"
+    "we-core": "^3.1.0",
+    "we-test-tools": "^1.0.0"
   },
   "author": "Alberto Souza <contato@albertosouza.net>",
   "license": "MIT",
